Bug 418642 - Latte doesn't save plasmoids in "group plasmoid" in Multiple mode
Summary: Latte doesn't save plasmoids in "group plasmoid" in Multiple mode
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: containment (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-08 20:33 UTC by Marcus Behrendt
Modified: 2020-08-19 14:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video showing the bug (3.46 MB, video/mp4)
2020-03-08 20:33 UTC, Marcus Behrendt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Behrendt 2020-03-08 20:33:38 UTC
Created attachment 126677 [details]
Video showing the bug

SUMMARY
When I add a "group plasmoid" (don't know whether this is the correct translation) to latte and add another plasmoid to this group plasmoid everything looks fine at a first glance. But when I log out or restart latte the group plasmoid is empty. Tested with standard plasma panel and issue doesn't occur here. 


STEPS TO REPRODUCE
1. add group plasmoid to latte
2. add another plasmoid to the group plasmoid
3. Log out or restart latte

OBSERVED RESULT
group plasmoid is empty

EXPECTED RESULT
group plasmoid contains the other plasmoid

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
Operating System: Arch Linux 
KDE Plasma Version: 5.18.2
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Kernel Version: 5.5.7-20-tkg-pds
OS Type: 64-bit
Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
Memory: 31,3 GiB


ADDITIONAL INFORMATION
Video attached
Comment 1 Michail Vourlakos 2020-03-08 21:06:42 UTC
1. What is the link of the group plasmoid ?
2. The video is not working in my system, use a google drive or dropbox link please
Comment 2 Marcus Behrendt 2020-03-08 21:44:42 UTC
Sorry for the video. Here another video file

https://drive.google.com/file/d/1BOZF2BUG64dIU6ksYdbDl0BggSzY-0iy/view?usp=sharing

What exactly do you mean with "link"?
Comment 3 Michail Vourlakos 2020-03-08 22:06:43 UTC
Is that a default plasma applet?
Comment 4 Michail Vourlakos 2020-03-08 22:07:26 UTC
Is that a default plasma applet?
Comment 5 Marcus Behrendt 2020-03-08 22:20:07 UTC
no. Its a very big latte panel :-).
I made it this big for demonstration purpose.
Comment 6 Marcus Behrendt 2020-03-08 22:24:18 UTC
(In reply to Michail Vourlakos from comment #4)
> Is that a default plasma applet?

Sorry got your question wrong. 
The group plasmoid is default. At least I cant remember when I installed such a thing.
Comment 7 Marcus Behrendt 2020-03-08 22:32:40 UTC
got this desktop file for the grouping plasmoid

/usr/share/plasma/plasmoids/org.kde.plasma.grouping/metadata.desktop
Comment 8 Michail Vourlakos 2020-03-08 22:48:55 UTC
Ok... I checked it out...

The applet works just fine when use Latte in Single Layout mode. It breaks only for Multiple Layouts. Makes sense because that applet works like the systrays, the Latte code needs to be adjusted in order to suppport it just like it is doing for plasma systrays.
Comment 9 Michail Vourlakos 2020-08-19 14:02:09 UTC
Git commit ac2a4cffc6c92b134bf3db1824e3d987d93a587d by Michail Vourlakos.
Committed on 19/08/2020 at 13:59.
Pushed by mvourlakos into branch 'master'.

support different subcontainments types

--create an abstract implementation for subcontainments
such as systrays and group applet in order to use
the same infrastructure for all storage operations
such as Multiple Layouts loading, copying views,
providing important information etc.

M  +48   -49   app/layout/genericlayout.cpp
M  +3    -3    app/layout/genericlayout.h
M  +111  -76   app/layouts/storage.cpp
M  +10   -4    app/layouts/storage.h

https://invent.kde.org/plasma/latte-dock/commit/ac2a4cffc6c92b134bf3db1824e3d987d93a587d