support different subcontainments types

--create an abstract implementation for subcontainments
such as systrays and group applet in order to use
the same infrastructure for all storage operations
such as Multiple Layouts loading, copying views,
providing important information etc.

BUG:418642